crates/test-ui/ui/not_encode.stderr
error[E0277]: the trait bound `Vec<u32>: Encode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<Vec<u32>>();
  |                 ^^^^^^^^ the trait `Encode` is not implemented for `Vec<u32>`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `(): Encode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<()>();
  |                 ^^ the trait `Encode` is not implemented for `()`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `(): RefEncode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<&()>();
  |                 ^^^ the trait `RefEncode` is not implemented for `()`
  |
  = help: the following other types implement trait `RefEncode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `&()` to implement `Encode`
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `(): RefEncode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<*const ()>();
  |                 ^^^^^^^^^ the trait `RefEncode` is not implemented for `()`
  |
  = help: the following other types implement trait `RefEncode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `*const ()` to implement `Encode`
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `c_void: Encode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<c_void>();
  |                 ^^^^^^ the trait `Encode` is not implemented for `c_void`
  |
  = help: the following other types implement trait `Encode`:
            *const c_void
            *mut c_void
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `c_void: RefEncode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<&c_void>();
  |                 ^^^^^^^ the trait `RefEncode` is not implemented for `c_void`
  |
  = help: the following other types implement trait `RefEncode`:
            *const c_void
            *mut c_void
  = note: required for `&c_void` to implement `Encode`
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `(): Encode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<&Block<((), i32), ()>>();
  |                 ^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `()`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `()` to implement `EncodeArgument`
  = note: required for `((), i32)` to implement `BlockArguments`
  = note: required for `block2::Block<((), i32), ()>` to implement `RefEncode`
  = note: required for `&block2::Block<((), i32), ()>` to implement `Encode`
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `fn() -> &'static (): Encode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<fn() -> &'static ()>();
  |                 ^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `fn() -> &'static ()`
  |
  = help: the following other types implement trait `Encode`:
            unsafe extern "C" fn() -> Ret
            extern "C" fn() -> Ret
            unsafe extern "C" fn(A) -> Ret
            extern "C" fn(A) -> Ret
            unsafe extern "C" fn(A, ...) -> Ret
            extern "C" fn(A, ...) -> Ret
            unsafe extern "C" fn(A, B) -> Ret
            extern "C" fn(A, B) -> Ret
          and $N others
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `fn(()): Encode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<fn(())>();
  |                 ^^^^^^ the trait `Encode` is not implemented for `fn(())`
  |
  = help: the following other types implement trait `Encode`:
            unsafe extern "C" fn() -> Ret
            extern "C" fn() -> Ret
            unsafe extern "C" fn(A) -> Ret
            extern "C" fn(A) -> Ret
            unsafe extern "C" fn(A, ...) -> Ret
            extern "C" fn(A, ...) -> Ret
            unsafe extern "C" fn(A, B) -> Ret
            extern "C" fn(A, B) -> Ret
          and $N others
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `fn(i32, ()): Encode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<fn(i32, ())>();
  |                 ^^^^^^^^^^^ the trait `Encode` is not implemented for `fn(i32, ())`
  |
  = help: the following other types implement trait `Encode`:
            unsafe extern "C" fn() -> Ret
            extern "C" fn() -> Ret
            unsafe extern "C" fn(A) -> Ret
            extern "C" fn(A) -> Ret
            unsafe extern "C" fn(A, ...) -> Ret
            extern "C" fn(A, ...) -> Ret
            unsafe extern "C" fn(A, B) -> Ret
            extern "C" fn(A, B) -> Ret
          and $N others
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `objc2::runtime::Sel: RefEncode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<&Sel>();
  |                 ^^^^ the trait `RefEncode` is not implemented for `objc2::runtime::Sel`
  |
  = note: required for `&objc2::runtime::Sel` to implement `Encode`
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`
help: consider removing the leading `&`-reference
  |
25 -     is_encode::<&Sel>();
25 +     is_encode::<Sel>();
   |

error[E0277]: the trait bound `UnsafeCell<&u8>: OptionEncode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<Option<UnsafeCell<&u8>>>();
  |                 ^^^^^^^^^^^^^^^^^^^^^^^ the trait `OptionEncode` is not implemented for `UnsafeCell<&u8>`
  |
  = help: the following other types implement trait `OptionEncode`:
            NonNull<c_void>
            NonNull<T>
            objc2::runtime::Sel
            NonZeroU8
            NonZeroU16
            NonZeroU32
            NonZeroU64
            NonZeroUsize
          and $N others
  = note: required for `Option<UnsafeCell<&u8>>` to implement `Encode`
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`

error[E0277]: the trait bound `Cell<&u8>: OptionEncode` is not satisfied
 --> ui/not_encode.rs
  |
  |     is_encode::<Option<Cell<&u8>>>();
  |                 ^^^^^^^^^^^^^^^^^ the trait `OptionEncode` is not implemented for `Cell<&u8>`
  |
  = help: the following other types implement trait `OptionEncode`:
            NonNull<c_void>
            NonNull<T>
            objc2::runtime::Sel
            NonZeroU8
            NonZeroU16
            NonZeroU32
            NonZeroU64
            NonZeroUsize
          and $N others
  = note: required for `Option<Cell<&u8>>` to implement `Encode`
note: required by a bound in `is_encode`
 --> ui/not_encode.rs
  |
  | fn is_encode<T: Encode>() {}
  |                 ^^^^^^ required by this bound in `is_encode`
